// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IaTab component matches snapshot when id is "glossary" 1`] = `
<div>
  <i
    class="icon --icon-24"
  >
    <img
      alt="icono Glossary"
      class="image flex --cover"
      decoding="async"
      fetchpriority="low"
      height="24"
      loading="lazy"
      src="pathDeployment/contextPath/resources/images/svgDegrade/glossary.webp"
    />
  </i>
  <h2
    class="text --font-bold text-20 as-flex-end"
  >
    Glossary
  </h2>
</div>
`;

exports[`IaTab component matches snapshot when id is "summary" 1`] = `
<div>
  <i
    class="icon --icon-24"
  >
    <img
      alt="icono Summary"
      class="image flex --cover"
      decoding="async"
      fetchpriority="low"
      height="24"
      loading="lazy"
      src="pathDeployment/contextPath/resources/images/svgDegrade/summary.webp"
    />
  </i>
  <h2
    class="text --font-bold text-20 as-flex-end"
  >
    Summary
  </h2>
</div>
`;
